--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,12 @@
       <artifactId>simple-ado</artifactId>
       <optional>true</optional>
     </dependency>
+    
+    <!-- web容器包 -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
